// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An instance of EventsButton matches the snapshot while hovering 1`] = `
<a
  aria-describedby={null}
  className="MuiButtonBase-root-73 MuiButton-root-49 MuiButton-text-51 MuiButton-flat-54 MuiButton-colorInherit-68"
  href="/events"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
  title=""
>
  <span
    className="MuiButton-label-50"
  >
    TEST_EVENTS_LABEL_2
  </span>
  <span
    className="MuiTouchRipple-root-76"
  />
</a>
`;

exports[`An instance of EventsButton matches the snapshot with Event 1`] = `
<a
  aria-describedby={null}
  className="MuiButtonBase-root-73 MuiButton-root-49 MuiButton-text-51 MuiButton-flat-54 MuiButton-colorInherit-68"
  href="/events"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
  title="M08 27 *Meetup* MyEvent"
>
  <span
    className="MuiButton-label-50"
  >
    TEST_EVENTS_LABEL_2
    <span
      className=" null"
    >
       ●
    </span>
  </span>
  <span
    className="MuiTouchRipple-root-76"
  />
</a>
`;

exports[`An instance of EventsButton matches the snapshot without Event 1`] = `
<a
  aria-describedby={null}
  className="MuiButtonBase-root-73 MuiButton-root-49 MuiButton-text-51 MuiButton-flat-54 MuiButton-colorInherit-68"
  href="/events"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
  title=""
>
  <span
    className="MuiButton-label-50"
  >
    TEST_EVENTS_LABEL_2
  </span>
  <span
    className="MuiTouchRipple-root-76"
  />
</a>
`;
